# fff2

./: API_USAGE.md  DEPLOYMENT.md  README.md  cli_interface.py  docker-compose.yml  pyproject.toml  requirements.txt  test_api.py  testing_interface.py
Backend/: FHIRClient.py  FIHR.py  HealthcareAssistant.py  agent.py  answer_accuarcy.py  fhir_mcp_server.py  main.py  tools.py
Frontend/: app.py
api/: main.py
